src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    BOOL
    DOUBLE_COLON
    FLOAT_TYPE
    NEWLINE
    UMINUS

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statement -> expression optional_semicolon
Rule 3     statement -> assign_stmt optional_semicolon
Rule 4     statement -> if_stmt
Rule 5     statement -> while_stmt
Rule 6     statement -> for_stmt
Rule 7     statement -> procedure_stmt
Rule 8     statement -> break_stmt
Rule 9     statement -> continue_stmt
Rule 10    statement -> return_stmt
Rule 11    statement -> scan_stmt
Rule 12    statement -> onscreen_stmt
Rule 13    statement -> call_stmt
Rule 14    statement -> pass_stmt
Rule 15    statement -> lambda_stmt
Rule 16    statement -> struct_decl_stmt
Rule 17    statements -> statement
Rule 18    statements -> statements statement
Rule 19    expression -> literal
Rule 20    expression -> IDENT
Rule 21    expression -> LPAREN expression RPAREN
Rule 22    expression -> LBRACE expression RBRACE
Rule 23    type -> I8
Rule 24    type -> I16
Rule 25    type -> I32
Rule 26    type -> I64
Rule 27    type -> U8
Rule 28    type -> U16
Rule 29    type -> U32
Rule 30    type -> U64
Rule 31    type -> F32
Rule 32    type -> F64
Rule 33    type -> USIZE
Rule 34    type -> ISIZE
Rule 35    type -> STR_TYPE
Rule 36    type -> BOOL_TYPE
Rule 37    type -> INT_TYPE
Rule 38    type -> CHAR_TYPE
Rule 39    type -> VOID
Rule 40    assign_stmt -> SET IDENT ASSIGN expression
Rule 41    assign_stmt -> SET expression ASSIGN expression
Rule 42    assign_stmt -> VAR type IDENT ASSIGN expression
Rule 43    assign_stmt -> VAR type IDENT
Rule 44    assign_stmt -> VAR LBRACKET type COMMA INT RBRACKET IDENT ASSIGN expression
Rule 45    literal -> STR
Rule 46    literal -> INT
Rule 47    literal -> FLOAT
Rule 48    literal -> TRUE
Rule 49    literal -> FALSE
Rule 50    literal -> CHAR
Rule 51    literal -> IDENT
Rule 52    expression -> expression ADD expression
Rule 53    expression -> expression SUB expression
Rule 54    expression -> expression MUL expression
Rule 55    expression -> expression DIV expression
Rule 56    expression -> expression MOD expression
Rule 57    expression -> expression POW expression
Rule 58    expression -> expression AND expression
Rule 59    expression -> expression OR expression
Rule 60    expression -> expression XOR expression
Rule 61    expression -> expression NE expression
Rule 62    expression -> expression EQ expression
Rule 63    expression -> expression GT expression
Rule 64    expression -> expression LT expression
Rule 65    expression -> expression GE expression
Rule 66    expression -> expression LE expression
Rule 67    expression -> NOT expression
Rule 68    expression -> SUB expression
Rule 69    if_stmt -> IF expression LBRACE statements RBRACE
Rule 70    if_stmt -> IF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 71    while_stmt -> WHILE expression LBRACE statements RBRACE
Rule 72    for_stmt -> FOR assign_stmt SEMICOLON expression SEMICOLON assign_stmt LBRACE statements RBRACE
Rule 73    for_stmt -> FOR assign_stmt IN expression LBRACE statements RBRACE
Rule 74    for_stmt -> FOR expression LBRACE statements RBRACE
Rule 75    param -> IDENT COLON type
Rule 76    params_list -> param
Rule 77    params_list -> params_list COMMA param
Rule 78    params_list -> empty
Rule 79    block -> LBRACE statements RBRACE
Rule 80    block -> empty
Rule 81    procedure_stmt -> PROCEDURE IDENT LPAREN params_list RPAREN COLON type block
Rule 82    procedure_stmt -> PROCEDURE IDENT LPAREN params_list RPAREN block
Rule 83    break_stmt -> BREAK optional_semicolon
Rule 84    continue_stmt -> CONTINUE optional_semicolon
Rule 85    return_stmt -> RETURN expression optional_semicolon
Rule 86    return_stmt -> RETURN optional_semicolon
Rule 87    onscreen_stmt -> ONSCREEN LPAREN expression RPAREN optional_semicolon
Rule 88    scan_stmt -> SCAN LPAREN expression RPAREN optional_semicolon
Rule 89    element -> expression
Rule 90    element_list -> element
Rule 91    element_list -> element_list COMMA element
Rule 92    element_list -> empty
Rule 93    expression -> LBRACKET element_list RBRACKET optional_semicolon
Rule 94    expression -> IDENT LBRACKET expression RBRACKET
Rule 95    argument -> IDENT
Rule 96    argument -> IDENT ASSIGN expression
Rule 97    argument_list -> argument
Rule 98    argument_list -> argument_list COMMA argument
Rule 99    argument_list -> empty
Rule 100   call_stmt -> IDENT LPAREN argument_list RPAREN optional_semicolon
Rule 101   pass_stmt -> PASS optional_semicolon
Rule 102   lambda_stmt -> type LPAREN argument_list RPAREN ARROW statement
Rule 103   field -> IDENT COLON type
Rule 104   field_list -> field
Rule 105   field_list -> field_list COMMA field
Rule 106   field_list -> empty
Rule 107   struct_decl_stmt -> STRUCT IDENT LBRACE field_list RBRACE
Rule 108   expression -> expression DOT IDENT
Rule 109   optional_semicolon -> SEMICOLON
Rule 110   optional_semicolon -> empty
Rule 111   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 52
AND                  : 58
ARRAY                : 
ARROW                : 102
ASSIGN               : 40 41 42 44 96
BOOL                 : 
BOOL_TYPE            : 36
BREAK                : 83
CHAR                 : 50
CHAR_TYPE            : 38
COLON                : 75 81 103
COMMA                : 44 77 91 98 105
CONTINUE             : 84
DIV                  : 55
DOT                  : 108
DOUBLE_COLON         : 
ELSE                 : 70
EQ                   : 62
F32                  : 31
F64                  : 32
FALSE                : 49
FLOAT                : 47
FLOAT_TYPE           : 
FOR                  : 72 73 74
GE                   : 65
GT                   : 63
I16                  : 24
I32                  : 25
I64                  : 26
I8                   : 23
IDENT                : 20 40 42 43 44 51 75 81 82 94 95 96 100 103 107 108
IF                   : 69 70
IN                   : 73
INT                  : 44 46
INT_TYPE             : 37
ISIZE                : 34
LBRACE               : 22 69 70 70 71 72 73 74 79 107
LBRACKET             : 44 93 94
LE                   : 66
LPAREN               : 21 81 82 87 88 100 102
LT                   : 64
MOD                  : 56
MUL                  : 54
NE                   : 61
NEWLINE              : 
NOT                  : 67
ONSCREEN             : 87
OR                   : 59
PASS                 : 101
POW                  : 57
PROCEDURE            : 81 82
RBRACE               : 22 69 70 70 71 72 73 74 79 107
RBRACKET             : 44 93 94
RETURN               : 85 86
RPAREN               : 21 81 82 87 88 100 102
SCAN                 : 88
SEMICOLON            : 72 72 109
SET                  : 40 41
STR                  : 45
STRUCT               : 107
STR_TYPE             : 35
SUB                  : 53 68
TRUE                 : 48
U16                  : 28
U32                  : 29
U64                  : 30
U8                   : 27
UMINUS               : 
USIZE                : 33
VAR                  : 42 43 44
VOID                 : 39
WHILE                : 71
XOR                  : 60
error                : 

Nonterminals, with rules where they appear

argument             : 97 98
argument_list        : 98 100 102
assign_stmt          : 3 72 72 73
block                : 81 82
break_stmt           : 8
call_stmt            : 13
continue_stmt        : 9
element              : 90 91
element_list         : 91 93
empty                : 78 80 92 99 106 110
expression           : 2 21 22 40 41 41 42 44 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 68 69 70 71 72 73 74 85 87 88 89 94 96 108
field                : 104 105
field_list           : 105 107
for_stmt             : 6
if_stmt              : 4
lambda_stmt          : 15
literal              : 19
onscreen_stmt        : 12
optional_semicolon   : 2 3 83 84 85 86 87 88 93 100 101
param                : 76 77
params_list          : 77 81 82
pass_stmt            : 14
procedure_stmt       : 7
program              : 0
return_stmt          : 10
scan_stmt            : 11
statement            : 17 18 102
statements           : 1 18 69 70 70 71 72 73 74 79
struct_decl_stmt     : 16
type                 : 42 43 44 75 81 102 103
while_stmt           : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (17) statements -> . statement
    (18) statements -> . statements statement
    (2) statement -> . expression optional_semicolon
    (3) statement -> . assign_stmt optional_semicolon
    (4) statement -> . if_stmt
    (5) statement -> . while_stmt
    (6) statement -> . for_stmt
    (7) statement -> . procedure_stmt
    (8) statement -> . break_stmt
    (9) statement -> . continue_stmt
    (10) statement -> . return_stmt
    (11) statement -> . scan_stmt
    (12) statement -> . onscreen_stmt
    (13) statement -> . call_stmt
    (14) statement -> . pass_stmt
    (15) statement -> . lambda_stmt
    (16) statement -> . struct_decl_stmt
    (19) expression -> . literal
    (20) expression -> . IDENT
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . LBRACE expression RBRACE
    (52) expression -> . expression ADD expression
    (53) expression -> . expression SUB expression
    (54) expression -> . expression MUL expression
    (55) expression -> . expression DIV expression
    (56) expression -> . expression MOD expression
    (57) expression -> . expression POW expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression XOR expression
    (61) expression -> . expression NE expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression GT expression
    (64) expression -> . expression LT expression
    (65) expression -> . expression GE expression
    (66) expression -> . expression LE expression
    (67) expression -> . NOT expression
    (68) expression -> . SUB expression
    (93) expression -> . LBRACKET element_list RBRACKET optional_semicolon
    (94) expression -> . IDENT LBRACKET expression RBRACKET
    (108) expression -> . expression DOT IDENT
    (40) assign_stmt -> . SET IDENT ASSIGN expression
    (41) assign_stmt -> . SET expression ASSIGN expression
    (42) assign_stmt -> . VAR type IDENT ASSIGN expression
    (43) assign_stmt -> . VAR type IDENT
    (44) assign_stmt -> . VAR LBRACKET type COMMA INT RBRACKET IDENT ASSIGN expression
    (69) if_stmt -> . IF expression LBRACE statements RBRACE
    (70) if_stmt -> . IF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (71) while_stmt -> . WHILE expression LBRACE statements RBRACE
    (72) for_stmt -> . FOR assign_stmt SEMICOLON expression SEMICOLON assign_stmt LBRACE statements RBRACE
    (73) for_stmt -> . FOR assign_stmt IN expression LBRACE statements RBRACE
    (74) for_stmt -> . FOR expression LBRACE statements RBRACE
    (81) procedure_stmt -> . PROCEDURE IDENT LPAREN params_list RPAREN COLON type block
    (82) procedure_stmt -> . PROCEDURE IDENT LPAREN params_list RPAREN block
    (83) break_stmt -> . BREAK optional_semicolon
    (84) continue_stmt -> . CONTINUE optional_semicolon
    (85) return_stmt -> . RETURN expression optional_semicolon
    (86) return_stmt -> . RETURN optional_semicolon
    (88) scan_stmt -> . SCAN LPAREN expression RPAREN optional_semicolon
    (87) onscreen_stmt -> . ONSCREEN LPAREN expression RPAREN optional_semicolon
    (100) call_stmt -> . IDENT LPAREN argument_list RPAREN optional_semicolon
    (101) pass_stmt -> . PASS optional_semicolon
    (102) lambda_stmt -> . type LPAREN argument_list RPAREN ARROW statement
    (107) struct_decl_stmt -> . STRUCT IDENT LBRACE field_list RBRACE
    (45) literal -> . STR
    (46) literal -> . INT
    (47) literal -> . FLOAT
    (48) literal -> . TRUE
    (49) literal -> . FALSE
    (50) literal -> . CHAR
    (51) literal -> . IDENT
    (23) type -> . I8
    (24) type -> . I16
    (25) type -> . I32
    (26) type -> . I64
    (27) type -> . U8
    (28) type -> . U16
    (29) type -> . U32
    (30) type -> . U64
    (31) type -> . F32
    (32) type -> . F64
    (33) type -> . USIZE
    (34) type -> . ISIZE
    (35) type -> . STR_TYPE
    (36) type -> . BOOL_TYPE
    (37) type -> . INT_TYPE
    (38) type -> . CHAR_TYPE
    (39) type -> . VOID

    IDENT           shift and go to state 20
    LPAREN          shift and go to state 21
    LBRACE          shift and go to state 22
    NOT             shift and go to state 24
    SUB             shift and go to state 23
    LBRACKET        shift and go to state 25
    SET             shift and go to state 26
    VAR             shift and go to state 27
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    PROCEDURE       shift and go to state 33
    BREAK           shift and go to state 34
    CONTINUE        shift and go to state 35
    RETURN          shift and go to state 36
    SCAN            shift and go to state 37
    ONSCREEN        shift and go to state 38
    PASS            shift and go to state 39
    STRUCT          shift and go to state 40
    STR             shift and go to state 41
    INT             shift and go to state 29
    FLOAT           shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    CHAR            shift and go to state 45
    I8              shift and go to state 46
    I16             shift and go to state 47
    I32             shift and go to state 48
    I64             shift and go to state 49
    U8              shift and go to state 50
    U16             shift and go to state 51
    U32             shift and go to state 52
    U64             shift and go to state 53
    F32             shift and go to state 54
    F64             shift and go to state 55
    USIZE           shift and go to state 56
    ISIZE           shift and go to state 57
    STR_TYPE        shift and go to state 58
    BOOL_TYPE       shift and go to state 59
    INT_TYPE        shift and go to state 60
    CHAR_TYPE       shift and go to state 61
    VOID            shift and go to state 62

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    assign_stmt                    shift and go to state 5
    if_stmt                        shift and go to state 6
    while_stmt                     shift and go to state 7
    for_stmt                       shift and go to state 8
    procedure_stmt                 shift and go to state 9
    break_stmt                     shift and go to state 10
    continue_stmt                  shift and go to state 11
    return_stmt                    shift and go to state 12
    scan_stmt                      shift and go to state 13
    onscreen_stmt                  shift and go to state 14
    call_stmt                      shift and go to state 15
    pass_stmt                      shift and go to state 16
    lambda_stmt                    shift and go to state 17
    struct_decl_stmt               shift and go to state 18
    literal                        shift and go to state 19
    type                           shift and go to state 28

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (18) statements -> statements . statement
    (2) statement -> . expression optional_semicolon
    (3) statement -> . assign_stmt optional_semicolon
    (4) statement -> . if_stmt
    (5) statement -> . while_stmt
    (6) statement -> . for_stmt
    (7) statement -> . procedure_stmt
    (8) statement -> . break_stmt
    (9) statement -> . continue_stmt
    (10) statement -> . return_stmt
    (11) statement -> . scan_stmt
    (12) statement -> . onscreen_stmt
    (13) statement -> . call_stmt
    (14) statement -> . pass_stmt
    (15) statement -> . lambda_stmt
    (16) statement -> . struct_decl_stmt
    (19) expression -> . literal
    (20) expression -> . IDENT
    (21) expression -> . LPAREN expression RPAREN
    (22) expression -> . LBRACE expression RBRACE
    (52) expression -> . expression ADD expression
    (53) expression -> . expression SUB expression
    (54) expression -> . expression MUL expression
    (55) expression -> . expression DIV expression
    (56) expression -> . expression MOD expression
    (57) expression -> . expression POW expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression XOR expression
    (61) expression -> . expression NE expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression GT expression
    (64) expression -> . expression LT expression
    (65) expression -> . expression GE expression
    (66) expression -> . expression LE expression
    (67) expression -> . NOT expression
    (68) expression -> . SUB expression
    (93) expression -> . LBRACKET element_list RBRACKET optional_semicolon
    (94) expression -> . IDENT LBRACKET expression RBRACKET
    (108) expression -> . expression DOT IDENT
    (40) assign_stmt -> . SET IDENT ASSIGN expression
    (41) assign_stmt -> . SET expression ASSIGN expression
    (42) assign_stmt -> . VAR type IDENT ASSIGN expression
    (43) assign_stmt -> . VAR type IDENT
    (44) assign_stmt -> . VAR LBRACKET type COMMA INT RBRACKET IDENT ASSIGN expression
    (69) if_stmt -> . IF expression LBRACE statements RBRACE
    (70) if_stmt -> . IF expression LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (71) while_stmt -> . WHILE expression LBRACE statements RBRACE
    (72) for_stmt -> . FOR assign_stmt SEMICOLON expression SEMICOLON assign_stmt LBRACE statements RBRACE
    (73) for_stmt -> . FOR assign_stmt IN expression LBRACE statements RBRACE
    (74) for_stmt -> . FOR expression LBRACE statements RBRACE
    (81) procedure_stmt -> . PROCEDURE IDENT LPAREN params_list RPAREN COLON type block
    (82) procedure_stmt -> . PROCEDURE IDENT LPAREN params_list RPAREN block
    (83) break_stmt -> . BREAK optional_semicolon
    (84) continue_stmt -> . CONTINUE optional_semicolon
    (85) return_stmt -> . RETURN expression optional_semicolon
    (86) return_stmt -> . RETURN optional_semicolon
    (88) scan_stmt -> . SCAN LPAREN expression RPAREN optional_semicolon
    (87) onscreen_stmt -> . ONSCREEN LPAREN expression RPAREN optional_semicolon
    (100) call_stmt -> . IDENT LPAREN argument_list RPAREN optional_semicolon
    (101) pass_stmt -> . PASS optional_semicolon
    (102) lambda_stmt -> . type LPAREN argument_list RPAREN ARROW statement
    (107) struct_decl_stmt -> . STRUCT IDENT LBRACE field_list RBRACE
    (45) literal -> . STR
    (46) literal -> . INT
    (47) literal -> . FLOAT
    (48) literal -> . TRUE
    (49) literal -> . FALSE
    (50) literal -> . CHAR
    (51) literal -> . IDENT
    (23) type -> . I8
    (24) type -> . I16
    (25) type -> . I32
    (26) type -> . I64
    (27) type -> . U8
    (28) type -> . U16
    (29) type -> . U32
    (30) type -> . U64
    (31) type -> . F32
    (32) type -> . F64
    (33) type -> . USIZE
    (34) type -> . ISIZE
    (35) type -> . STR_TYPE
    (36) type -> . BOOL_TYPE
    (37) type -> . INT_TYPE
    (38) type -> . CHAR_TYPE
    (39) type -> . VOID

    $end            reduce using rule 1 (program -> statements .)
    IDENT           shift and go to state 20
    LPAREN          shift and go to state 21
    LBRACE          shift and go to state 22
    NOT             shift and go to state 24
    SUB             shift and go to state 23
    LBRACKET        shift and go to state 25
    SET             shift and go to state 26
    VAR             shift and go to state 27
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    PROCEDURE       shift and go to state 33
    BREAK           shift and go to state 34
    CONTINUE        shift and go to state 35
    RETURN          shift and go to state 36
    SCAN            shift and go to state 37
    ONSCREEN        shift and go to state 38
    PASS            shift and go to state 39
    STRUCT          shift and go to state 40
    STR             shift and go to state 41
    INT             shift and go to state 29
    FLOAT           shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    CHAR            shift and go to state 45
    I8              shift and go to state 46
    I16             shift and go to state 47
    I32             shift and go to state 48
    I64             shift and go to state 49
    U8              shift and go to state 50
    U16             shift and go to state 51
    U32             shift and go to state 52
    U64             shift and go to state 53
    F32             shift and go to state 54
    F64             shift and go to state 55
    USIZE           shift and go to state 56
    ISIZE           shift and go to state 57
    STR_TYPE        shift and go to state 58
    BOOL_TYPE       shift and go to state 59
    INT_TYPE        shift and go to state 60
    CHAR_TYPE       shift and go to state 61
    VOID            shift and go to state 62

    statement                      shift and go to state 63
    expression                     shift and go to state 4
    assign_stmt                    shift and go to state 5
    if_stmt                        shift and go to state 6
    while_stmt                     shift and go to state 7
    for_stmt                       shift and go to state 8
    procedure_stmt                 shift and go to state 9
    break_stmt                     shift and go to state 10
    continue_stmt                  shift and go to state 11
    return_stmt                    shift and go to state 12
    scan_stmt                      shift and go to state 13
    onscreen_stmt                  shift and go to state 14
    call_stmt                      shift and go to state 15
    pass_stmt                      shift and go to state 16
    lambda_stmt                    shift and go to state 17
    struct_decl_stmt               shift and go to state 18
    literal                        shift and go to state 19
    type                           shift and go to state 28

state 3

    (17) statements -> statement .

    IDENT           reduce using rule 17 (statements -> statement .)
    LPAREN          reduce using rule 17 (statements -> statement .)
    LBRACE          reduce using rule 17 (statements -> statement .)
    NOT             reduce using rule 17 (statements -> statement .)
    SUB             reduce using rule 17 (statements -> statement .)
    LBRACKET        reduce using rule 17 (statements -> statement .)
    SET             reduce using rule 17 (statements -> statement .)
    VAR             reduce using rule 17 (statements -> statement .)
    IF              reduce using rule 17 (statements -> statement .)
    WHILE           reduce using rule 17 (statements -> statement .)
    FOR             reduce using rule 17 (statements -> statement .)
    PROCEDURE       reduce using rule 17 (statements -> statement .)
    BREAK           reduce using rule 17 (statements -> statement .)
    CONTINUE        reduce using rule 17 (statements -> statement .)
    RETURN          reduce using rule 17 (statements -> statement .)
    SCAN            reduce using rule 17 (statements -> statement .)
    ONSCREEN        reduce using rule 17 (statements -> statement .)
    PASS            reduce using rule 17 (statements -> statement .)
    STRUCT          reduce using rule 17 (statements -> statement .)
    STR             reduce using rule 17 (statements -> statement .)
    INT             reduce using rule 17 (statements -> statement .)
    FLOAT           reduce using rule 17 (statements -> statement .)
    TRUE            reduce using rule 17 (statements -> statement .)
    FALSE           reduce using rule 17 (statements -> statement .)
    CHAR            reduce using rule 17 (statements -> statement .)
    I8              reduce using rule 17 (statements -> statement .)
    I16             reduce using rule 17 (statements -> statement .)
    I32             reduce using rule 17 (statements -> statement .)
    I64             reduce using rule 17 (statements -> statement .)
    U8              reduce using rule 17 (statements -> statement .)
    U16             reduce using rule 17 (statements -> statement .)
    U32             reduce using rule 17 (statements -> statement .)
    U64             reduce using rule 17 (statements -> statement .)
    F32             reduce using rule 17 (statements -> statement .)
    F64             reduce using rule 17 (statements -> statement .)
    USIZE           reduce using rule 17 (statements -> statement .)
    ISIZE           reduce using rule 17 (statements -> statement .)
    STR_TYPE        reduce using rule 17 (statements -> statement .)
    BOOL_TYPE       reduce using rule 17 (statements -> statement .)
    INT_TYPE        reduce using rule 17 (statements -> statement .)
    CHAR_TYPE       reduce using rule 17 (statements -> statement .)
    VOID            reduce using rule 17 (statements -> statement .)
    $end            reduce using rule 17 (statements -> statement .)
    RBRACE          reduce using rule 17 (statements -> statement .)


state 4

    (2) statement -> expression . optional_semicolon
    (52) expression -> expression . ADD expression
    (53) expression -> expression . SUB expression
    (54) expression -> expression . MUL expression
    (55) expression -> expression . DIV expression
    (56) expression -> expression . MOD expression
    (57) expression -> expression . POW expression
    (58) expression -> expression . AND expression
    (59) expression -> expression . OR expression
    (60) expression -> expression . XOR expression
    (61) expression -> expression . NE expression
    (62) expression -> expression . EQ expression
    (63) expression -> expression . GT expression
    (64) expression -> expression . LT expression
    (65) expression -> expression . GE expression
    (66) expression -> expression . LE expression
    (108) expression -> expression . DOT IDENT
    (109) optional_semicolon -> . SEMICOLON
    (110) optional_semicolon -> . empty
    (111) empty -> .

  ! shift/reduce conflict for SUB resolved as shift
    ADD             shift and go to state 65
    SUB             shift and go to state 66
    MUL             shift and go to state 67
    DIV             shift and go to state 68
    MOD             shift and go to state 69
    POW             shift and go to state 70
    AND             shift and go to state 71
    OR              shift and go to state 72
    XOR             shift and go to state 73
    NE              shift and go to state 74
    EQ              shift and go to state 75
    GT              shift and go to state 76
    LT              shift and go to state 77
    GE              shift and go to state 78
    LE              shift and go to state 79
    DOT             shift and go to state 80
    SEMICOLON       shift and go to state 81
    IDENT           reduce using rule 111 (empty -> .)
    LPAREN          reduce using rule 111 (empty -> .)
    LBRACE          reduce using rule 111 (empty -> .)
    NOT             reduce using rule 111 (empty -> .)
    LBRACKET        reduce using rule 111 (empty -> .)
    SET             reduce using rule 111 (empty -> .)
    VAR             reduce using rule 111 (empty -> .)
    IF              reduce using rule 111 (empty -> .)
    WHILE           reduce using rule 111 (empty -> .)
    FOR             reduce using rule 111 (empty -> .)
    PROCEDURE       reduce using rule 111 (empty -> .)
    BREAK           reduce using rule 111 (empty -> .)
    CONTINUE        reduce using rule 111 (empty -> .)
    RETURN          reduce using rule 111 (empty -> .)
    SCAN            reduce using rule 111 (empty -> .)
    ONSCREEN        reduce using rule 111 (empty -> .)
    PASS            reduce using rule 111 (empty -> .)
    STRUCT          reduce using rule 111 (empty -> .)
    STR             reduce using rule 111 (empty -> .)
    INT             reduce using rule 111 (empty -> .)
    FLOAT           reduce using rule 111 (empty -> .)
    TRUE            reduce using rule 111 (empty -> .)
    FALSE           reduce using rule 111 (empty -> .)
    CHAR            reduce using rule 111 (empty -> .)
    I8              reduce using rule 111 (empty -> .)
    I16             reduce using rule 111 (empty -> .)
    I32             reduce using rule 111 (empty -> .)
    I64             reduce using rule 111 (empty -> .)
    U8              reduce using rule 111 (empty -> .)
    U16             reduce using rule 111 (empty -> .)
    U32             reduce using rule 111 (empty -> .)
    U64             reduce using rule 111 (empty -> .)
    F32             reduce using rule 111 (empty -> .)
    F64             reduce using rule 111 (empty -> .)
    USIZE           reduce using rule 111 (empty -> .)
    ISIZE           reduce using rule 111 (empty -> .)
    STR_TYPE        reduce using rule 111 (empty -> .)
    BOOL_TYPE       reduce using rule 111 (empty -> .)
    INT_TYPE        reduce using rule 111 (empty -> .)
    CHAR_TYPE       reduce using rule 111 (empty -> .)
    VOID            reduce using rule 111 (empty -> .)
    $end            reduce using rule 111 (empty -> .)
    RBRACE          reduce using rule 111 (empty -> .)

  ! SUB             [ reduce using rule 111 (empty -> .) ]

    optional_semicolon             shift and go to state 64
    empty                          shift and go to state 82

state 5

    (3) statement -> assign_stmt . optional_semicolon
    (109) optional_semicolon -> . SEMICOLON
    (110) optional_semicolon -> . empty
    (111) empty -> .

    SEMICOLON       shift and go to state 81
    IDENT           reduce using rule 111 (empty -> .)
    LPAREN          reduce using rule 111 (empty -> .)
    LBRACE          reduce using rule 111 (empty -> .)
    NOT             reduce using rule 111 (empty -> .)
    SUB             reduce using rule 111 (empty -> .)
    LBRACKET        reduce using rule 111 (empty -> .)
    SET             reduce using rule 111 (empty -> .)
    VAR             reduce using rule 111 (empty -> .)
    IF              reduce using rule 111 (empty -> .)
    WHILE           reduce using rule 111 (empty -> .)
    FOR             reduce using rule 111 (empty -> .)
    PROCEDURE       reduce using rule 111 (empty -> .)
    BREAK           reduce using rule 111 (empty -> .)
    CONTINUE        reduce using rule 111 (empty -> .)
    RETURN          reduce using rule 111 (empty -> .)
    SCAN            reduce using rule 111 (empty -> .)
    ONSCREEN        reduce using rule 111 (empty -> .)
    PASS            reduce using rule 111 (empty -> .)
    STRUCT          reduce using rule 111 (empty -> .)
    STR             reduce using rule 111 (empty -> .)
    INT             reduce using rule 111 (empty -> .)
    FLOAT           reduce using rule 111 (empty -> .)
    TRUE            reduce using rule 111 (empty -> .)
    FALSE           reduce using rule 111 (empty -> .)
    CHAR            reduce using rule 111 (empty -> .)
    I8              reduce using rule 111 (empty -> .)
    I16             reduce using rule 111 (empty -> .)
    I32             reduce using rule 111 (empty -> .)
    I64             reduce using rule 111 (empty -> .)
    U8              reduce using rule 111 (empty -> .)
    U16             reduce using rule 111 (empty -> .)
    U32             reduce using rule 111 (empty -> .)
    U64             reduce using rule 111 (empty -> .)
    F32             reduce using rule 111 (empty -> .)
    F64             reduce using rule 111 (empty -> .)
    USIZE           reduce using rule 111 (empty -> .)
    ISIZE           reduce using rule 111 (empty -> .)
    STR_TYPE        reduce using rule 111 (empty -> .)
    BOOL_TYPE       reduce using rule 111 (empty -> .)
    INT_TYPE        reduce using rule 111 (empty -> .)
    CHAR_TYPE       reduce using rule 111 (empty -> .)
    VOID            reduce using rule 111 (empty -> .)
    $end            reduce using rule 111 (empty -> .)
    RBRACE          reduce using rule 111 (empty -> .)

    optional_semicolon             shift and go to state 83
    empty                          shift and go to state 82

state 6

    (4) statement -> if_stmt .

    IDENT           reduce using rule 4 (statement -> if_stmt .)
    LPAREN          reduce using rule 4 (statement -> if_stmt .)
    LBRACE          reduce using rule 4 (statement -> if_stmt .)
    NOT             reduce using rule 4 (statement -> if_stmt .)
    SUB             reduce using rule 4 (statement -> if_stmt .)
    LBRACKET        reduce using rule 4 (statement -> if_stmt .)
    SET             reduce using rule 4 (statement -> if_stmt .)
    VAR             reduce using rule 4 (statement -> if_stmt .)
    IF              reduce using rule 4 (statement -> if_stmt .)
    WHILE           reduce using rule 4 (statement -> if_stmt .)
    FOR             reduce using rule 4 (statement -> if_stmt .)
    PROCEDURE       reduce using rule 4 (statement -> if_stmt .)
    BREAK           reduce using rule 4 (statement -> if_stmt .)
    CONTINUE        reduce using rule 4 (statement -> if_stmt .)
    RETURN          reduce using rule 4 (statement -> if_stmt .)
    SCAN            reduce using rule 4 (statement -> if_stmt .)
    ONSCREEN        reduce using rule 4 (statement -> if_stmt .)
    PASS            reduce using rule 4 (statement -> if_stmt .)
    STRUCT          reduce using rule 4 (statement -> if_stmt .)
    STR             reduce using rule 4 (statement -> if_stmt .)
    INT             reduce using rule 4 (statement -> if_stmt .)
    FLOAT           reduce using rule 4 (statement -> if_stmt .)
    TRUE            reduce using rule 4 (statement -> if_stmt .)
    FALSE           reduce using rule 4 (statement -> if_stmt .)
    CHAR            reduce using rule 4 (statement -> if_stmt .)
    I8              reduce using rule 4 (statement -> if_stmt .)
    I16             reduce using rule 4 (statement -> if_stmt .)
    I32             reduce using rule 4 (statement -> if_stmt .)
    I64             reduce using rule 4 (statement -> if_stmt .)
    U8              reduce using rule 4 (statement -> if_stmt .)
    U16             reduce using rule 4 (statement -> if_stmt .)
    U32             reduce using rule 4 (statement -> if_stmt .)
    U64             reduce using rule 4 (statement -> if_stmt .)
    F32             reduce using rule 4 (statement -> if_stmt .)
    F64             reduce using rule 4 (statement -> if_stmt .)
    USIZE           reduce using rule 4 (statement -> if_stmt .)
    ISIZE           reduce using rule 4 (statement -> if_stmt .)
    STR_TYPE        reduce using rule 4 (statement -> if_stmt .)
    BOOL_TYPE       reduce using rule 4 (statement -> if_stmt .)
    INT_TYPE        reduce using rule 4 (statement -> if_stmt .)
    CHAR_TYPE       reduce using rule 4 (statement -> if_stmt .)
    VOID            reduce using rule 4 (statement -> if_stmt .)
    $end            reduce using rule 4 (statement -> if_stmt .)
    RBRACE          reduce using rule 4 (statement -> if_stmt .)


state 7

    (5) statement -> while_stmt .
